--- a/.tmp/public/src/app/member/index.tpl.html
+++ b/.tmp/public/src/app/member/index.tpl.html
@@ -1,92 +1,53 @@
 <div ui-view="member">
-	<div class="content-profile-page">
-	  <div class="profile-user-page card">
-	    <div class="img-user-profile">
-	      <div style="height:25em;width: 100%;overflow: hidden;">
-	      	<img class="profile-bgHome" src="{{member.coverUrl}}" err-src="/images/avatar.png" />
-	      </div>
-		  <uib-tabset class="container">
-			<uib-tab heading="Activity" active="active" style="margin-left:11em">
-			</uib-tab>
-			<uib-tab heading="{{committees.length}} Committees">
-				<md-card ng-repeat="committee in committees" class="">
-					<md-card-title>
-						<md-card-title-text>
-							<a href="/committee/{{committee.committee.urlTitle}}/"><h3>{{committee.committee.title}}</h3></a>
-							<h5>{{committee.title}}</h5>
-							<!--number of reps?-->
-						</md-card-title-text>
-					<md-card-title>
-				</md-card>
-			</uib-tab>
-			<uib-tab heading="{{constituents.length}} Constituents">
-				<md-card ng-repeat="constituent in constituents">
-					<md-card-title-text>
-						<a href="/member/{{constituent.constituent.username}}/">{{constituent.constituent.username}}</a>
-					</md-card-title-text>
-				</md-card>
-			</uib-tab>
-			<uib-tab heading="{{representatives.length}} Representatives">
-				<md-card ng-repeat="representative in representatives">
-					<md-card-title-text>
-						<a href="/member/{{representative.representative.username}}/">{{representative.representative.username}}</a>
-					</md-card-title-text>
-				</md-card>
-			</uib-tab>
-			<uib-tab heading="{{voteCount}} Votes">
-				<md-card ng-repeat="vote in votes">
-					<md-card-title>
-						<md-card-title-text>
-							<p>{{vote.voteString}}</p> on behalf of {{constituents.length}} constituents about
-							<a href="/vote/{{vote.vote.id}}">{{vote.vote.title}}</a> for 
-							<a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}">{{vote.bill.title}}</a>
-						</md-card-title-text>
-					</md-card-title>
-				</md-card>
-			</uib-tab>
-			<uib-tab ng-click="goToAccount()" ng-show="currentUser.id == member.id" heading="Edit Profile">
-			</uib-tab>
-	      </uib-tabset>
-		  <md-divider></md-divider>
-	      <div class="container">
-	      	<img class="avatar" src="{{member.avatarUrl}}"/>
-	  	  </div>
-	    </div>
-	    <div class="user-profile-data container">
-	    	<div class="pull-left">
-	      		<h2>{{member.username}}</h2>
-	      		<h5 ng-show="member.title"><span style="color:grey">{{member.title}}</span></h5>
-	      		<h5 ng-show="member.district"><span style="color:grey">District {{member.district}}</span></h5>
-	      		<h5 ng-show="member.state"><span style="color:grey">{{member.state}}</span></h5>
-	      	 	<a ng-show="member.socialAccounts.facebook.profileUrl" href="{{member.socialAccounts.facebook.profileUrl}}"  target="_blank"><span class="fa fa-facebook"></span> facebook</a>
-		     	<a ng-show="member.socialAccounts.twitter.profileUrl" href="{{member.socialAccounts.twitter.profileUrl}}"  target="_blank"><span class="fa fa-twitter"></span> twitter</a>
-		     	<a ng-show="member.socialAccounts.google.profileUrl" href="{{member.socialAccounts.google.profileUrl}}"  target="_blank"><span class="fa fa-google"></span> google</a>
-		      	<br><br>
-	  		</div>
-	  		<div class="pull-right">
-				<button class="btn btn-default">contact</button>
-				<!--<h5 ng-show="member.phone">phone: {{member.phone}}</h5>
-		     	<h5 ng-show="showFax">fax: {{member.fax}}</h5>-->
-		      	<!--<h5 ng-show="member.email">email: {{member.email}}</h5>-->
-		      <button class="btn btn-default">follow</button>
-		      <br>
-			  <!--can have dif reps per committee-->
-		      <!--represented by (list of reps with each committee)-->
-		      <div ng-show="currentUser.id != member.id">
-		      	<button ng-show="isFollowing" class="btn btn-primary" ng-click="removeRepresentative()">remove as a representative</button>
-		      	<br>
-		      	<button ng-show="!isFollowing" class="btn btn-primary" ng-click="selectAsRepresentative()">select as a representative</button>
-		  	  </div>
-		      <br>
-		      <div ng-show="currentUser.id == member.id">
-				<a href="/account"><button class="btn btn-default">settings</button></a>
-			  </div>
-			  <div style="clear:both;height:15px"></div>
-		  <div>
-	       <br>
-	       <br>
-	    </div>
-	  </div>
+
+	<div class="">
+		<div style="height:17em;width: 100%;overflow: hidden;">
+			<img style="width: 100%;margin-top: -10%" class="profile-bgHome" src="{{member.coverUrl}}" err-src="/images/avatar.png" />
+		</div>
+		<uib-tabset class="container">
+			<uib-tab heading="Activity" active="active" style="margin-left:11em"></uib-tab>
+			<uib-tab heading="{{committees.length}} Committees"></uib-tab>
+			<uib-tab heading="{{constituents.length}} Constituents"></uib-tab>
+			<uib-tab heading="{{representatives.length}} Representatives"></uib-tab>
+			<uib-tab heading="{{voteCount}} Votes"></uib-tab>
+			<uib-tab ng-click="goToAccount()" ng-show="currentUser.id == member.id" heading="Edit Profile"></uib-tab>
+		</uib-tabset>
+		<md-divider></md-divider>
+		<div class="container">
+			<img class="avatar" src="{{member.avatarUrl}}"/>
+		</div>
+		<div class="container">
+			<div class="pull-left">
+				<h2>{{member.username}}</h2>
+				<h5 ng-show="member.title"><span style="color:grey">{{member.title}}</span></h5>
+				<h5 ng-show="member.district"><span style="color:grey">District {{member.district}}</span></h5>
+				<h5 ng-show="member.state"><span style="color:grey">{{member.state}}</span></h5>
+				<a ng-show="member.socialAccounts.facebook.profileUrl" href="{{member.socialAccounts.facebook.profileUrl}}"  target="_blank"><span class="fa fa-facebook"></span> facebook</a>
+				<a ng-show="member.socialAccounts.twitter.profileUrl" href="{{member.socialAccounts.twitter.profileUrl}}"  target="_blank"><span class="fa fa-twitter"></span> twitter</a>
+				<a ng-show="member.socialAccounts.google.profileUrl" href="{{member.socialAccounts.google.profileUrl}}"  target="_blank"><span class="fa fa-google"></span> google</a>
+				<br><br>
+			</div>
+			<div class="pull-right">
+				<h5 ng-show="member.phone">phone: {{member.phone}}</h5>
+				<h5 ng-show="showFax">fax: {{member.fax}}</h5>
+				<h5 ng-show="member.email">email: {{member.email}}</h5>
+				<button class="btn btn-default">follow</button>
+				<br>
+				<!--can have dif reps per committee-->
+				<!--represented by (list of reps with each committee)-->
+				<div ng-show="currentUser.id != member.id">
+					<button ng-show="isFollowing" class="btn btn-primary" ng-click="removeRepresentative()">remove as a representative</button>
+					<br>
+					<button ng-show="!isFollowing" class="btn btn-primary" ng-click="selectAsRepresentative()">select as a representative</button>
+					</div>
+				<br>
+				<div ng-show="currentUser.id == member.id">
+					<a href="/account"><button class="btn btn-default">settings</button></a>
+				</div>
+				<div style="clear:both;height:15px"></div>
+			</div>
+			<div class="spacing-10"></div>
+		</div>
 	</div>
 
 	<uib-tabset class="container">
@@ -94,12 +55,15 @@
 			<div class="profilePost">
 				<form role="form">
 					<md-input-container class="md-block">
-			          <textarea ng-model="newPost.post" md-maxlength="150" rows="5" md-select-on-focus aria-label="new post"></textarea>
+			        	<textarea ng-model="newPost.post" rows="5" md-select-on-focus aria-label="new post"></textarea>
+						<div class="spacing-10"></div>
+						<!--connect legislators-->
+						<p>send as a fax? -- send as mail (verified), send email (always) -- send video??</p>
+						<button ng-click="createPost()" type="submit" class="btn btn-default">Submit</button>
 					</md-input-container>
-					<!--connect legislators-->
-					<button ng-click="createPost()" type="submit" class="btn btn-default">Submit</button>
 				</form>
 			</div>
+			<div class="spacing-25"></div>
 
 			<md-card ng-repeat="post in posts">
 				<md-card-title>
@@ -131,15 +95,15 @@
 		</uib-tab>
 		<uib-tab heading="{{committees.length}} Committees">
 			<div class="container">
-			<md-card ng-repeat="committee in committees" class="">
-				<md-card-title>
-					<md-card-title-text>
-						<a href="/committee/{{committee.committee.urlTitle}}/"><h3>{{committee.committee.title}}</h3></a>
-						<h5>{{committee.title}}</h5>
-						<!--number of reps?-->
-					</md-card-title-text>
-				<md-card-title>
-			</md-card>
+				<md-card ng-repeat="committee in committees" class="">
+					<md-card-title>
+						<md-card-title-text>
+							<a href="/committee/{{committee.committee.urlTitle}}/"><h3>{{committee.committee.title}}</h3></a>
+							<h5>{{committee.title}}</h5>
+							<!--number of reps?-->
+						</md-card-title-text>
+					<md-card-title>
+				</md-card>
 			</div>
 		</uib-tab>
 		<uib-tab heading="{{constituents.length}} Constituents">
@@ -207,7 +171,7 @@
 		</uib-tab>
 	</uib-tabset>
 	
-	<div style="height:50px"></div>
+	<div class="spacing-50"></div>
 	<div ng-include="'footer/index.tpl.html'"></div>
 
 </div>
