--- a/.tmp/public/src/app/search/index.tpl.html
+++ b/.tmp/public/src/app/search/index.tpl.html
@@ -86,9 +86,9 @@
 					<button ng-show="!gettingRepresentatives" ng-click="getLatLng()" class="btn btn-default">find representatives</button><br><br>
 			        <i ng-show="gettingRepresentatives" style="font-size:48px" class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
 					<div class="col-lg-4 col-sm-6" ng-repeat="user in officialRepresentatives">
-						<div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
+						<div class="member-card">
 							<div class="image" style="background-image: url('{{user.coverUrl}}')">
-								<img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" ng-src="{{user.avatarUrl}}" err-src="/images/avatar.png">
+								<img ng-src="{{user.avatarUrl}}" err-src="/images/avatar.png">
 							</div>
 							<div class="info">
 								<h2 class="name"><a href="member/{{user.username}}">{{user.username}}</a></h2>
@@ -103,9 +103,9 @@
 						</div>
 					</div>
 					<div class="col-lg-4 col-sm-6" ng-repeat="user in users">
-						<div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
+						<div class="member-card">
 							<div class="image" style="background-image: url('{{user.coverUrl}}')">
-								<img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" ng-src="{{user.avatarUrl}}" err-src="/images/avatar.png">
+								<img ng-src="{{user.avatarUrl}}" err-src="/images/avatar.png">
 							</div>
 							<div class="info">
 								<h2 class="name"><a href="member/{{user.username}}">{{user.username}}</a></h2>
@@ -177,9 +177,9 @@
 			<div class="spacing-15"></div>
 			<div ng-repeat="searchResult in searchResults">
 				<div class="col-lg-4 col-sm-6" ng-show="searchResult.username">
-					<div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
+					<div class="member-card">
 						<div class="image" style="background-image: url('{{searchResult.coverUrl}}')">
-							<img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" ng-src="{{searchResult.avatarUrl}}" err-src="/images/avatar.png">
+							<img ng-src="{{searchResult.avatarUrl}}" err-src="/images/avatar.png">
 						</div>
 						<div class="info">
 							<h2 class="name"><a href="member/{{searchResult.username}}">{{searchResult.username}}</a></h2>
