--- a/.tmp/public/styles/css/theme.css
+++ b/.tmp/public/styles/css/theme.css
@@ -179,6 +179,12 @@ md-progress-linear.md-default-theme .md-bar, md-progress-linear .md-bar {
  background-color: #2ab996!important;
 }
 
+.member-card{
+  margin:10px;
+  box-shadow: 2px 2px 10px #999;
+  overflow:hidden
+}
+
 .image {
   height: 250px;
   background: center center no-repeat;
@@ -186,6 +192,8 @@ md-progress-linear.md-default-theme .md-bar, md-progress-linear .md-bar {
 }
 
 .image img{
+  position:absolute;
+  margin-top:4em;
   left: 0;
   right: 0;
   margin: 0 auto;
