--- a/assets/src/app/bill/index.tpl.html
+++ b/assets/src/app/bill/index.tpl.html
@@ -14,15 +14,14 @@
 		<uib-tabset>
 			<uib-tab heading="Info" active="active">
 				<div class="col-lg-4 col-sm-6">
-					<div style="margin:10px; box-shadow: 2px 2px 10px #999;">
+					<div class="member-card">
 						<div class="image" style="background-image: url('{{bill.user.coverUrl}}')">
-							<img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em;max-width:20em" ng-src="{{bill.user.avatarUrl}}" err-src="/images/avatar.png">
+							<img ng-src="{{bill.user.avatarUrl}}" err-src="/images/avatar.png">
 						</div>
 						<div class="info">
 						    <h2 class="name"><a href="member/{{bill.user.username}}">{{bill.user.username}}</a></h2>
 						    <p>{{bill.user.title}}</p>
 							<p>{{bill.user.state}}</p>
-							<button class="btn btn-default">follow</button>
 						</div>
 						<div class="social">
 							<a ng-show="bill.user.socialAccounts.facebook.profileUrl" href="{{bill.user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
