--- a/assets/src/app/committee/templates/home.tpl.html
+++ b/assets/src/app/committee/templates/home.tpl.html
@@ -123,15 +123,14 @@
     <!--<uib-tab heading="Members" ng-click="goToPath('members')">-->
       <div class="container" style="min-height:100vh">
         <div class="col-lg-4 col-sm-6" ng-repeat="member in members">
-          <div style="margin:10px; box-shadow: 2px 2px 10px #999;">
+          <div class="member-card">
             <div class="image" style="background-image: url('{{member.user.coverUrl}}')">
-              <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" class="avatar" src="{{member.user.avatarUrl}}" err-src="/images/avatar.png">
+              <img ng-src="{{member.user.avatarUrl}}" err-src="/images/avatar.png">
             </div>
             <div class="info">
-              <h2 class="name"><a href="member/{{member.user.username}}">{{member.user.username}}</a></h2>
-              <h3 class="position" style="text-transform:capitalize"><a href="member/{{member.user.username}}">{{member.title}}</a></h3>
-              <p>{{member.user.title}}</p>
-              <!--<button class="btn btn-default">follow</button>-->
+                <h2 class="name"><a href="member/{{member.user.username}}">{{member.user.username}}</a></h2>
+                <p>{{member.user.title}}</p>
+                <p>{{member.user.state}}</p>
             </div>
             <div class="social">
               <a ng-show="member.user.socialAccounts.facebook.profileUrl" href="{{member.user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
