--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -226,9 +226,9 @@
         <i ng-show="gettingRepresentatives" style="font-size:48px" class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
 
         <div class="col-lg-4 col-sm-6" ng-repeat="user in officialRepresentatives">
-          <div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
+          <div class="member-card">
             <div class="image" style="background-image: url('{{user.coverUrl}}')">
-              <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" ng-src="{{user.avatarUrl}}" err-src="/images/avatar.png">
+              <img ng-src="{{user.avatarUrl}}" err-src="/images/avatar.png">
             </div>
             <div class="info">
               <h2 class="name"><a href="member/{{user.username}}">{{user.username}}</a></h2>
@@ -244,9 +244,9 @@
         </div>
 
         <div class="col-lg-4 col-sm-6" ng-repeat="user in users">
-          <div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
+          <div class="member-card">
             <div class="image" style="background-image: url('{{user.coverUrl}}')">
-              <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" ng-src="{{user.avatarUrl}}" err-src="/images/avatar.png">
+              <img ng-src="{{user.avatarUrl}}" err-src="/images/avatar.png">
             </div>
             <div class="info">
               <h2 class="name"><a href="member/{{user.username}}">{{user.username}}</a></h2>
